<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/login_background"
    tools:context=".barcodereader.QRActivity">

    <RelativeLayout
        android:id="@+id/barcode_progress_relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/barcode_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="visible" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/barcode_view"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/barcode_header"
            android:id="@+id/status_message"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/barcode_value"
            android:layout_below="@+id/status_message"
            android:visibility="gone"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="110dp"
            android:layout_alignRight="@+id/status_message"
            android:layout_alignEnd="@+id/status_message" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_barcode"
            android:id="@+id/read_barcode"
            android:textAllCaps="false"
            android:backgroundTint="@color/teal"
            android:textSize="@dimen/_15sdp"
            android:padding="15dp"
            android:textColor="@color/white"
            android:layout_below="@+id/check_relative"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/_40sdp"/>

        <RelativeLayout
            android:id="@+id/check_relative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_below="@+id/barcode_value">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_focus"
                android:id="@+id/auto_focus"
                android:textColor="@color/white"
                android:layout_marginTop="66dp"
                android:layout_centerHorizontal="true"
                android:checked="false" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_flash"
                android:id="@+id/use_flash"
                android:layout_below="@+id/auto_focus"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:checked="false" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>