<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/eq_name"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="@dimen/_15sdp"
            android:background="@color/colorPrimary"
            android:text="Edit"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/eq_code"
            android:text="Equipment code"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/eq_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            >
            <EditText
                android:id="@+id/balance"
                android:hint="@string/balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionId="6"
                android:textColor="@color/colorPrimary"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            >
            <EditText
                android:id="@+id/sold"
                android:hint="@string/sold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionId="6"
                android:textColor="@color/colorPrimary"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
        <!--<android.support.v7.widget.AppCompatEditText-->
            <!--android:id="@+id/username"-->
            <!--android:inputType="textEmailAddress"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="16dp"-->
            <!--android:layout_marginLeft="4dp"-->
            <!--android:layout_marginRight="4dp"-->
            <!--android:layout_marginBottom="4dp"-->
            <!--android:hint="@string/balance"-->
            <!--android:backgroundTint="@color/colorPrimary"/>-->
        <!--<EditText-->
            <!--android:id="@+id/password"-->
            <!--android:inputType="textPassword"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="4dp"-->
            <!--android:layout_marginLeft="4dp"-->
            <!--android:layout_marginRight="4dp"-->
            <!--android:layout_marginBottom="16dp"-->
            <!--android:fontFamily="sans-serif"-->
            <!--android:hint="@string/sold"/>-->
    </LinearLayout>
</ScrollView>

